# seo-toolkit

./: .env.example  .gitignore  DEPLOYMENT.md  TEST_DATA.md  add_check_depth.sql  package-lock.json  package.json  schema.sql  schema_fix.sql  tsconfig.tsbuildinfo
prisma/: schema.prisma
prisma/migrations/20260414110338_add_page_keyword_tracking/: migration.sql
python-agents/: pyproject.toml
python-agents/src/: __init__.py  models.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/audit/compare/: route.ts
src/app/api/page-keywords/: route.ts
src/app/api/page-keywords/check/: route.ts
src/app/api/page-keywords/export/: route.ts
src/app/api/page-keywords/history/: route.ts
src/app/api/page-keywords/import/: route.ts
src/app/api/projects/: route.ts
src/app/api/projects/[projectId]/: route.ts
src/app/api/projects/[projectId]/competitors/: route.ts
src/app/api/serp/check/: route.ts
src/app/api/serp/compare/: route.ts
src/app/api/tracker/history/: route.ts
src/app/auditor/: page.tsx
src/app/compare/: page.tsx
src/app/explorer/: page.tsx
src/app/rank-checker/: page.tsx
src/app/rank-checker/pages/: page.tsx
src/app/settings/: page.tsx
src/app/tracker/: page.tsx
src/components/layout/: Sidebar.tsx  TopBar.tsx
src/components/page-keywords/: PageKeywordDashboard.tsx  PageKeywordManager.tsx
src/components/rank-checker/: PositionBadge.tsx  ResultsTable.tsx  SearchForm.tsx  SerpFeatureBadge.tsx
src/lib/: utils.ts
src/lib/serp/: mock.ts  provider.ts  serpapi.ts  serper.ts
src/types/: audit.ts  serp.ts  tracker.ts
(+2 files in other folders)
