[project]
name = "seo-audit-agent"
version = "0.1.0"
description = "AI-powered SEO audit agent"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai>=0.0.19",
    "pydantic>=2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100